# SDMatch

./: .gitignore  CMakeLists.txt  INTEGRATION.md  README.md
docs/api-reference/: README.md
docs/examples/: full-flow.md
docs/quickstart/: aar-usage.md  android.md  flutter.md  ios.md  maui.md  react-native.md
kyc-sdk/: README.md
kyc-sdk/docs/api-reference/: README.md
kyc-sdk/docs/examples/: full-flow.md
kyc-sdk/docs/quickstart/: android.md  flutter.md  ios.md  maui.md  react-native.md
